@@ -20,7 +20,6 @@ package org.apache.solr.cloud;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.common.cloud.SolrZkClient;
-import org.apache.solr.common.params.CollectionParams;
 import org.apache.zookeeper.KeeperException;
 import org.junit.Test;
 import org.slf4j.Logger;
@@ -97,7 +96,7 @@ public class RollingRestartTest extends AbstractFullDistribZkTestBase {
             if (leader == null)
               log.error("NOOVERSEER election queue is :" +
                   OverseerCollectionConfigSetProcessor.getSortedElectionNodes(cloudClient.getZkStateReader().getZkClient(),
-                      OverseerElectionContext.PATH + LeaderElector.ELECTION_NODE));
+                      "/overseer_elect/election"));
             fail("No overseer designate as leader found after restart #" + (i + 1) + ": " + leader);
           }
         }
@@ -108,7 +107,7 @@ public class RollingRestartTest extends AbstractFullDistribZkTestBase {
           if (leader == null)
             log.error("NOOVERSEER election queue is :" +
                 OverseerCollectionConfigSetProcessor.getSortedElectionNodes(cloudClient.getZkStateReader().getZkClient(),
-                    OverseerElectionContext.PATH + LeaderElector.ELECTION_NODE));
+                    "/overseer_elect/election"));
           fail("No overseer leader found after restart #" + (i + 1) + ": " + leader);
         }
         
